--- a/Engineers/Views/Orders/Edit.cshtml
+++ b/Engineers/Views/Orders/Edit.cshtml
@@ -8,7 +8,6 @@
                 <img src="~/@Model.Images[0]" class="rounded-lg" height="60" width="80" asp-append-version="true" />
             </td>
             <td>@Model.Name</td>
-            <td>@Model.Address</td>
             <td>@Model.Cost</td>
             <td>
                 <form asp-action="Delete" asp-route-id="@Model.Id" method="post">
@@ -19,7 +18,7 @@
             </td>
         </tr>
 </table>
-<form method="post" asp-action="Edit" asp-controller="Order" enctype="multipart/form-data">
+<form method="post" asp-action="Edit" asp-controller="Orders" enctype="multipart/form-data">
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
         <input type="hidden" asp-for="Id" />
@@ -37,12 +36,16 @@
         <input type="text" asp-for="Cost" class="form-control" />
     </div>
     <div class="form-group">
-        <label asp-for="Address" class="control-label">Адресс</label>
-        <input type="text" asp-for="Address" class="form-control" />
+        <label asp-for="Longitude" class="control-label">Широта</label>
+        <input type="text" asp-for="Longitude" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="Latitude" class="control-label">Долгота</label>
+        <input type="text" asp-for="Latitude" class="form-control" />
     </div>
     <div class="form-group">
         <label asp-for="State" class="control-label">Состояние заказа</label>
-        <input type="number" asp-for="State" class="form-control" max="2" min="0"/>
+        <input type="number" asp-for="State" class="form-control" max="2" min="0" />
     </div>
     <div class="form-group">
         <label asp-for="Updated_at" class="control-label">Последнее обновление</label>
