--- a/Engineers/Views/Orders/Index.cshtml
+++ b/Engineers/Views/Orders/Index.cshtml
@@ -2,10 +2,10 @@
 @{
     ViewBag.Title = "Список заказов";
 }
-<a asp-controller="Order" asp-action="Create">+ Добавить задание</a>
-
+<a asp-controller="Orders" asp-action="Create">+ Добавить задание</a>    |
+<a asp-controller="Orders" asp-action="CreateWithBlueprint">+ Добавить шаблонное задание</a>
 <table class="table">
-    <tr><th>Картинка</th><th>Название</th><th>Адресс</th><th>Цена</th><th>Пользователь</th></tr>
+    <tr><th>Картинка</th><th>Название</th><th>Цена</th><th>Пользователь</th></tr>
     @foreach (var order in Model)
     {
         if (order.Images != null)
@@ -15,9 +15,15 @@
                     <img src="~/@order.Images.Split(';').First()" class="rounded-lg" height="60" width="80" asp-append-version="true" />
                 </td>
                 <td>@order.Name</td>
-                <td>@order.Address</td>
                 <td>@order.Cost</td>
-                <td>@order.User.UserName</td>
+                @if (order.Owner != null)
+                {
+                    <td>@order.Owner.UserName</td>
+                }
+                else
+                {
+                    <td>Пользователь не определен</td>
+                }
                 <td>
                     <form asp-action="Delete" asp-route-id="@order.Id" method="post">
                         <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@order.Id">Изменить</a>
@@ -35,7 +41,6 @@
                     <img src="~/@Properties.PathToDefaultOrderImage" class="rounded-lg" height="60" width="80" asp-append-version="true" />
                 </td>
                 <td>@order.Name</td>
-                <td>@order.Address</td>
                 <td>@order.Cost</td>
                 <td>Ошибка загрузки данных</td>
                 <td>
