--- a/Engineers/Views/Shared/_Layout.cshtml
+++ b/Engineers/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                             </li>
                         }
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="Index">Список заданий</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">Список заданий</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Отчеты</a>
