--- a/Engineers/Views/Users/Index.cshtml
+++ b/Engineers/Views/Users/Index.cshtml
@@ -22,7 +22,7 @@
             <td>@user.FullName</td>
             <td>@user.City</td>
             <td>@user.PhoneNumber</td>
-            <td>@user.MinDescription</td>
+            <td>@user.Comments</td>
             <td>
                 <form asp-action="Delete" asp-route-id="@user.Id" method="post">
                     <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@user.Id">Изменить</a>
