--- a/Engineers/wwwroot/css/form.css
+++ b/Engineers/wwwroot/css/form.css
@@ -9,6 +9,25 @@
     padding: 15px;
     margin: 0 auto;
 }
+.button-green {
+    font-weight: 700;
+    color: white;
+    text-decoration: none;
+    padding: .8em 1em calc(.8em + 3px);
+    border-radius: 3px;
+    background: rgb(64,199,129);
+    box-shadow: 0 -3px rgb(53,167,110) inset;
+    transition: 0.2s;
+}
+
+button-green:hover {
+    background: rgb(53, 167, 110);
+}
+
+abutton-green:active {
+    background: rgb(33,147,90);
+    box-shadow: 0 3px rgb(33,147,90) inset;
+}
 .class_bigtext {
     font-size: 30px;
     font-weight: bold;
